tests/fail/d006_invalid_binop.dew
# D006: type mismatch — expected Int for +, found Bool
def main = fn () {
    true + 1
}
